@@ -1,19 +1,16 @@
 package com.github.saphyra.apphub.service.skyxplore.game.service.planet.storage;
 
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import com.github.saphyra.apphub.service.skyxplore.game.domain.data.GameData;
-import org.springframework.stereotype.Component;
-
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.GameDataItem;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.StorageType;
 import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.resource.ResourceDataService;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.GameData;
 import com.github.saphyra.apphub.service.skyxplore.game.domain.data.allocated_resource.AllocatedResource;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.data.planet.Planet;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
+
+import java.util.List;
+import java.util.UUID;
 
 @Component
 @RequiredArgsConstructor
@@ -21,8 +18,12 @@ import lombok.extern.slf4j.Slf4j;
 public class AllocatedResourceAmountQueryService {
     private final ResourceDataService resourceDataService;
 
-    public int getAllocatedResourceAmount(String dataId, GameData gameData, UUID location) {
-        return getAllocatedResourceAmount(dataId, planet.getStorageDetails().getAllocatedResources());
+    public int getAllocatedResourceAmount(GameData gameData, UUID location, String dataId) {
+        return gameData.getAllocatedResources()
+            .getByLocationAndDataId(location, dataId)
+            .stream()
+            .mapToInt(AllocatedResource::getAmount)
+            .sum();
     }
 
     public int getAllocatedResourceAmount(String dataId, List<AllocatedResource> allocatedResources) {
@@ -32,16 +33,15 @@ public class AllocatedResourceAmountQueryService {
             .sum();
     }
 
-    public int getAllocatedResourceAmount(Planet planet, StorageType storageType) {
+    public int getAllocatedResourceAmount(GameData gameData, UUID location, StorageType storageType) {
         List<String> dataIdsByStorageType = resourceDataService.getByStorageType(storageType)
             .stream()
             .map(GameDataItem::getId)
-            .collect(Collectors.toList());
+            .toList();
 
-        return planet.getStorageDetails()
-            .getAllocatedResources()
+        return gameData.getAllocatedResources()
+            .getByLocation(location)
             .stream()
-            .filter(reservedStorage -> dataIdsByStorageType.contains(reservedStorage.getDataId()))
             .mapToInt(AllocatedResource::getAmount)
             .sum();
     }
